--- a/Nerdle.AutoConfig.Tests.Integration/Nerdle.AutoConfig.Tests.Integration.csproj
+++ b/Nerdle.AutoConfig.Tests.Integration/Nerdle.AutoConfig.Tests.Integration.csproj
@@ -66,6 +66,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="MappingInternalTypes.cs" />
+    <Compile Include="MappingWithDefaultConfig.cs" />
     <Compile Include="SectionNameConventions.cs" />
     <Compile Include="UsingCustomMappers.cs" />
     <Compile Include="ConfiguringTheMappingStrategy.cs" />
