--- a/Nerdle.AutoConfig/Nerdle.AutoConfig.csproj
+++ b/Nerdle.AutoConfig/Nerdle.AutoConfig.csproj
@@ -42,8 +42,8 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AutoConfig.cs" />
-    <Compile Include="Casing\CamelCaseConverter.cs" />
-    <Compile Include="Casing\MatchingCaseConverter.cs" />
+    <Compile Include="Strategy\Casing\CamelCaseConverter.cs" />
+    <Compile Include="Strategy\Casing\MatchingCaseConverter.cs" />
     <Compile Include="ConfigurationSystem.cs" />
     <Compile Include="Mapping\ITypeMapping.cs" />
     <Compile Include="Mapping\MappingFactory.cs" />
@@ -63,14 +63,14 @@
     <Compile Include="Strategy\IStrategyManager.cs" />
     <Compile Include="TypeGeneration\ITypeEmitter.cs" />
     <Compile Include="TypeGeneration\ITypeFactory.cs" />
-    <Compile Include="Mappers\ArrayMapper.cs" />
-    <Compile Include="Mappers\DictionaryMapper.cs" />
-    <Compile Include="Mappers\KeyValuePairMapper.cs" />
-    <Compile Include="Mappers\MapperSelector.cs" />
-    <Compile Include="Mappers\CollectionMapper.cs" />
-    <Compile Include="Mappers\IMapper.cs" />
-    <Compile Include="Mappers\RecursingMapper.cs" />
-    <Compile Include="Mappers\ValueMapper.cs" />
+    <Compile Include="Mapping\Mappers\ArrayMapper.cs" />
+    <Compile Include="Mapping\Mappers\DictionaryMapper.cs" />
+    <Compile Include="Mapping\Mappers\KeyValuePairMapper.cs" />
+    <Compile Include="Mapping\Mappers\MapperSelector.cs" />
+    <Compile Include="Mapping\Mappers\CollectionMapper.cs" />
+    <Compile Include="Mapping\Mappers\IMapper.cs" />
+    <Compile Include="Mapping\Mappers\RecursingMapper.cs" />
+    <Compile Include="Mapping\Mappers\ValueMapper.cs" />
     <Compile Include="Exceptions\AutoConfigException.cs" />
     <Compile Include="Exceptions\AutoConfigMappingException.cs" />
     <Compile Include="Exceptions\AutoConfigTypeGenerationException.cs" />
@@ -78,7 +78,7 @@
     <Compile Include="Mapping\MappingFromAttribute.cs" />
     <Compile Include="Mapping\IPropertyMapping.cs" />
     <Compile Include="Mapping\MappingFromElement.cs" />
-    <Compile Include="Casing\ICaseConverter.cs" />
+    <Compile Include="Strategy\Casing\ICaseConverter.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TypeGeneration\TypeBuilderExtensions.cs" />
     <Compile Include="Extensions\TypeExtensions.cs" />
