--- a/Nerdle.AutoConfig.Tests.Unit/Nerdle.AutoConfig.Tests.Unit.csproj
+++ b/Nerdle.AutoConfig.Tests.Unit/Nerdle.AutoConfig.Tests.Unit.csproj
@@ -73,6 +73,7 @@
     <Compile Include="Casing\MatchingCaseConverterTests\When_converting_to_matching_case.cs" />
     <Compile Include="Extensions\When_deriving_a_concrete_name.cs" />
     <Compile Include="Extensions\When_getting_public_setters_for_a_type.cs" />
+    <Compile Include="Mappers\KeyedCollectionMapperTests\When_mapping_a_keyed_collection.cs" />
     <Compile Include="Mappers\KeyValuePairMapperTests\When_mapping_a_key_value_pair.cs" />
     <Compile Include="Sections\DefaultSectionNameConventionTests\When_using_alternative_names_by_convention.cs" />
     <Compile Include="Sections\SectionProviderTests\When_locating_a_section_by_convention.cs" />
