--- a/Nerdle.AutoConfig.Tests.Integration/App.config
+++ b/Nerdle.AutoConfig.Tests.Integration/App.config
@@ -1,4 +1,17 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
-  <!-- this config file will be overwritten on test fixture setup, don't modify/remove -->
+
+  <configSections>
+    <section name="foo" type="Nerdle.AutoConfig.Section, Nerdle.AutoConfig" />
+    <section name="bar" type="Nerdle.AutoConfig.Section, Nerdle.AutoConfig" />
+  </configSections>
+
+  <foo>
+    <name>foo</name>
+  </foo>
+
+  <bar>
+    <name>bar</name>
+  </bar>
+
 </configuration>
