--- a/Nerdle.AutoConfig/Nerdle.AutoConfig.csproj
+++ b/Nerdle.AutoConfig/Nerdle.AutoConfig.csproj
@@ -1,100 +1,13 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
-<Project ToolsVersion="12.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
-  <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
+﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
-    <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
-    <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{ED242B1A-EC9E-4865-A59B-11F1498D46A5}</ProjectGuid>
-    <OutputType>Library</OutputType>
-    <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Nerdle.AutoConfig</RootNamespace>
-    <AssemblyName>Nerdle.AutoConfig</AssemblyName>
-    <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
-    <FileAlignment>512</FileAlignment>
-    <TargetFrameworkProfile />
+    <TargetFrameworks>net45;netstandard2.0</TargetFrameworks>
+    <GenerateAssemblyInfo>false</GenerateAssemblyInfo>
   </PropertyGroup>
-  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
-    <DebugSymbols>true</DebugSymbols>
-    <DebugType>full</DebugType>
-    <Optimize>false</Optimize>
-    <OutputPath>bin\Debug\</OutputPath>
-    <DefineConstants>DEBUG;TRACE</DefineConstants>
-    <ErrorReport>prompt</ErrorReport>
-    <WarningLevel>4</WarningLevel>
-  </PropertyGroup>
-  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
-    <DebugType>pdbonly</DebugType>
-    <Optimize>true</Optimize>
-    <OutputPath>bin\Release\</OutputPath>
-    <DefineConstants>TRACE</DefineConstants>
-    <ErrorReport>prompt</ErrorReport>
-    <WarningLevel>4</WarningLevel>
-  </PropertyGroup>
-  <ItemGroup>
-    <Reference Include="System" />
-    <Reference Include="System.Configuration" />
-    <Reference Include="System.Core" />
-    <Reference Include="System.Xml.Linq" />
-    <Reference Include="System.Data.DataSetExtensions" />
-    <Reference Include="Microsoft.CSharp" />
-    <Reference Include="System.Data" />
-    <Reference Include="System.Xml" />
+  <ItemGroup Condition=" '$(TargetFramework)' == 'net45' ">
+    <Reference Include="System.Configuration" Condition="'$(TargetFramework)' == 'net45'" />
   </ItemGroup>
-  <ItemGroup>
-    <Compile Include="AutoConfig.cs" />
-    <Compile Include="Mapping\Mappers\KeyedCollectionMapper.cs" />
-    <Compile Include="Strategy\Casing\CamelCaseConverter.cs" />
-    <Compile Include="Strategy\Casing\MatchingCaseConverter.cs" />
-    <Compile Include="ConfigurationSystem.cs" />
-    <Compile Include="Mapping\ITypeMapping.cs" />
-    <Compile Include="Mapping\MappingFactory.cs" />
-    <Compile Include="Mapping\MappingFromFixedValue.cs" />
-    <Compile Include="Sections\DefaultSectionNameConvention.cs" />
-    <Compile Include="Sections\ISectionNameConvention.cs" />
-    <Compile Include="Sections\SectionProvider.cs" />
-    <Compile Include="Strategy\ConfigurePropertyStrategy.cs" />
-    <Compile Include="Strategy\IMappingStrategy.cs" />
-    <Compile Include="Strategy\MappingStrategy.cs" />
-    <Compile Include="Strategy\ConfigureMappingStrategy.cs" />
-    <Compile Include="Strategy\IConfigureMappingStrategy.cs" />
-    <Compile Include="Strategy\IConfigurePropertyStrategy.cs" />
-    <Compile Include="Strategy\StrategyManager.cs" />
-    <Compile Include="Strategy\PropertyStrategy.cs" />
-    <Compile Include="Mapping\IMappingFactory.cs" />
-    <Compile Include="Strategy\IStrategyManager.cs" />
-    <Compile Include="TypeGeneration\ITypeEmitter.cs" />
-    <Compile Include="TypeGeneration\ITypeFactory.cs" />
-    <Compile Include="Mapping\Mappers\ArrayMapper.cs" />
-    <Compile Include="Mapping\Mappers\DictionaryMapper.cs" />
-    <Compile Include="Mapping\Mappers\KeyValuePairMapper.cs" />
-    <Compile Include="Mapping\Mappers\MapperSelector.cs" />
-    <Compile Include="Mapping\Mappers\CollectionMapper.cs" />
-    <Compile Include="Mapping\Mappers\IMapper.cs" />
-    <Compile Include="Mapping\Mappers\RecursingMapper.cs" />
-    <Compile Include="Mapping\Mappers\ValueMapper.cs" />
-    <Compile Include="Exceptions\AutoConfigException.cs" />
-    <Compile Include="Exceptions\AutoConfigMappingException.cs" />
-    <Compile Include="Exceptions\AutoConfigTypeGenerationException.cs" />
-    <Compile Include="MappingEngine.cs" />
-    <Compile Include="Mapping\MappingFromAttribute.cs" />
-    <Compile Include="Mapping\IPropertyMapping.cs" />
-    <Compile Include="Mapping\MappingFromElement.cs" />
-    <Compile Include="Strategy\Casing\ICaseConverter.cs" />
-    <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="TypeGeneration\TypeBuilderExtensions.cs" />
-    <Compile Include="Extensions\TypeExtensions.cs" />
-    <Compile Include="Section.cs" />
-    <Compile Include="TypeGeneration\TypeEmitter.cs" />
-    <Compile Include="TypeGeneration\TypeFactory.cs" />
-    <Compile Include="Mapping\TypeMapping.cs" />
+  <ItemGroup Condition=" '$(TargetFramework)' == 'netstandard2.0' ">
+    <PackageReference Include="System.Configuration.ConfigurationManager" Version="4.5.0" />
+    <PackageReference Include="System.Reflection.Emit" Version="4.3.0" />
   </ItemGroup>
-  <ItemGroup />
-  <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
-  <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
-       Other similar extension points exist, see Microsoft.Common.targets.
-  <Target Name="BeforeBuild">
-  </Target>
-  <Target Name="AfterBuild">
-  </Target>
-  -->
 </Project>
