Configure project for cross-platform `dotnet pack`
* The PackageReference to `Microsoft.NETFramework.ReferenceAssemblies` in Directory.Build.props enables building the net45 target on Linux and macOS without having mono installed, just with the .NET Core SDK.

* The NuGet packaging information (authors, copyright, description etc.) is now in the `Nerdle.AutoConfig.csproj` file. All the properties are documented in [NuGet pack and restore as MSBuild targets][1].

* [SourceLink][2] was added for improved debugging experience.

Note that even though the SourceLink package is a preview, the format is stable:

> ##### Preview Status
> 
> We recommend using Source Link preview for building production packages. Although the implementation details and the public APIs of the Source Link pre-release packages are still in flux, there will be no difference in the format of the data it generates between preview and 1.0.0. The only changes in the generated data we expect are due to bug fixes that target scenario that previously did not work correctly.


* [MinVer][3] was chosen for versioning the package. It is *a minimalistic .NET package for versioning .NET SDK-style projects using Git tags.*

With all this in place, producing the NuGet package and [symbol package][4] becomes an easy two step process:

1. Add a tag with the version: `git tag v1.4.0`
2. Run `dotnet pack -c Release`

Both `Nerdle.AutoConfig.1.4.0.nupkg` and `Nerdle.AutoConfig.1.4.0.snupkg` will be produced, ready to be [published on NuGet][5].

[1]: https://docs.microsoft.com/en-us/nuget/reference/msbuild-targets#pack-target
[2]: https://docs.microsoft.com/en-us/dotnet/standard/library-guidance/sourcelink
[3]: https://github.com/adamralph/minver
[4]: https://docs.microsoft.com/en-us/nuget/create-packages/symbol-packages-snupkg
[5]: https://docs.microsoft.com/en-us/nuget/create-packages/symbol-packages-snupkg#publishing-a-symbol-package

--- a/Nerdle.AutoConfig/Nerdle.AutoConfig.csproj
+++ b/Nerdle.AutoConfig/Nerdle.AutoConfig.csproj
@@ -1,7 +1,16 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
     <TargetFrameworks>net45;netstandard2.0</TargetFrameworks>
-    <GenerateAssemblyInfo>false</GenerateAssemblyInfo>
+    <Authors>edpollitt</Authors>
+    <Copyright>Copyright edpollitt 2015-2019</Copyright>
+    <Description>AutoConfig is an automagical, convention-based, customisable, extensible library for mapping configuration files to POCO C# objects/interfaces with the absolute minimum of code.</Description>
+    <PackageLicenseExpression>MIT</PackageLicenseExpression>
+    <PackageProjectUrl>https://github.com/edpollitt/Nerdle.AutoConfig</PackageProjectUrl>
+    <PackageTags>configuration mapper mapping map xml config autoconfig web.config app.config</PackageTags>
+    <RepositoryUrl>https://github.com/edpollitt/Nerdle.AutoConfig</RepositoryUrl>
+    <RepositoryType>git</RepositoryType>
+    <IncludeSymbols>true</IncludeSymbols>
+    <SymbolPackageFormat>snupkg</SymbolPackageFormat>
   </PropertyGroup>
   <ItemGroup Condition=" '$(TargetFramework)' == 'net45' ">
     <Reference Include="System.Configuration" Condition="'$(TargetFramework)' == 'net45'" />
@@ -10,4 +19,17 @@
     <PackageReference Include="System.Configuration.ConfigurationManager" Version="4.5.0" />
     <PackageReference Include="System.Reflection.Emit" Version="4.3.0" />
   </ItemGroup>
+  <ItemGroup>
+    <PackageReference Include="Microsoft.SourceLink.GitHub" Version="1.0.0-beta2-19367-01" PrivateAssets="All" />
+    <PackageReference Include="MinVer" Version="1.2.0" PrivateAssets="All" />
+  </ItemGroup>
+  <PropertyGroup>
+    <MinVerTagPrefix>v</MinVerTagPrefix>
+  </PropertyGroup>
+  <Target Name="FixAssemblyVersion" AfterTargets="MinVer">
+    <PropertyGroup>
+      <!-- MinVer would set the assembly version to 1.0.0.0 but versions have already been published with 1.1.0.0, see https://github.com/adamralph/minver#version-numbers -->
+      <AssemblyVersion>1.1.0.0</AssemblyVersion>
+    </PropertyGroup>
+  </Target>
 </Project>
