Disable shallow clone on Travis CI
It looks like the shallow clone is causing trouble to MinVer.

dotnet "/home/travis/.nuget/packages/minver/1.2.0/build/../minver/MinVer.dll" --auto-increment "" --build-metadata "" --default-pre-release-phase "" --minimum-major-minor "" --repo "/home/travis/build/edpollitt/Nerdle.AutoConfig/Nerdle.AutoConfig" --tag-prefix "v" --verbosity "" --version-override ""
  
  Unhandled Exception: LibGit2Sharp.NotFoundException: object not found - no match for id (70d9fa918158110d240566adcd8fec857ca3b044)

Instructions to disable shallow clone on https://docs.travis-ci.com/user/customizing-the-
build/#git-clone-depth

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,7 @@
 language: csharp
 dotnet: 2.1.801
+git:
+  depth: false
 solution: Nerdle.AutoConfig.sln
 install:
   - nuget restore Nerdle.AutoConfig.sln
