Update NuGet and .NET Core versions
* Update all NuGet packages to the latest versions
* Update test projects to target .NET Framework 4.8 + .NET Core 3.1
* Update dotnet SDK version on Travis to 3.1.402

--- a/Directory.Build.props
+++ b/Directory.Build.props
@@ -2,6 +2,6 @@
   <ItemGroup>
     <!-- Required for building the .NET Framework target (net45) on Linux and macOS without mono.
          Eventually, explicitly using the reference assemblies shouldn't be needed anymore, see https://github.com/dotnet/designs/pull/33#issuecomment-528457298 -->
-    <PackageReference Include="Microsoft.NETFramework.ReferenceAssemblies" Version="1.0.0-preview.2" PrivateAssets="All" />
+    <PackageReference Include="Microsoft.NETFramework.ReferenceAssemblies" Version="1.0.0" PrivateAssets="All" />
   </ItemGroup>
 </Project>
